--- a/src/app/meetup/groups/groups.component.html
+++ b/src/app/meetup/groups/groups.component.html
@@ -1,4 +1,16 @@
-<div fxLayoutAlign="center center">
+<div class="top-margin" fxLayoutAlign="center center" *ngIf="!loading">
+  <p class="selected-category">
+    Showing all groups for Category: <b>{{ categoryName }}</b>
+  </p>
+</div>
+<div class="top-margin" *ngIf="loading" fxLayoutAlign="center center">
+  <mat-progress-spinner
+    mode="indeterminate"
+    color="primary"
+  ></mat-progress-spinner>
+</div>
+
+<div class="top-margin" fxLayoutAlign="center center" *ngIf="!loading">
   <mat-form-field fxFlex="40%">
     <input
       matInput
@@ -10,23 +22,19 @@
 </div>
 
 <mat-table [dataSource]="dataSource" matSort>
-  <ng-container matColumnDef="date">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{ element.date | date }}</mat-cell>
-  </ng-container>
-
   <ng-container matColumnDef="name">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
     <mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
   </ng-container>
 
-  <ng-container matColumnDef="calories">
-    <mat-header-cell *matHeaderCellDef mat-sort-header
-      >Calories</mat-header-cell
-    >
-    <mat-cell *matCellDef="let element">{{
-      element.calories | number
-    }}</mat-cell>
+  <ng-container matColumnDef="status">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+    <mat-cell *matCellDef="let element">{{ element.status }}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="link">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Link</mat-header-cell>
+    <mat-cell *matCellDef="let element">{{ element.link }}</mat-cell>
   </ng-container>
 
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -35,6 +43,6 @@
 
 <mat-paginator
   #paginator
-  [pageSize]="1"
+  [pageSize]="5"
   [pageSizeOptions]="[5, 10, 20]"
 ></mat-paginator>
