--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -6,7 +6,9 @@
   fxLayoutAlign="center center"
 >
   <section>
-    <h1>COMMUNITY</h1>
-    <p>get to know people</p>
+    <h1>DVT Welcomes you!</h1>
+    <p>
+      Learn more.. <a href="https://www.dvt.co.za/" target="_blank">here!</a>
+    </p>
   </section>
 </div>
