--- a/src/app/meetup/settings/settings.component.html
+++ b/src/app/meetup/settings/settings.component.html
@@ -20,10 +20,7 @@
   <span
     >You have selected : <b>{{ categoryName }}</b></span
   ><br />
-  <span>Proceed to groups...</span><br />
-  <ul fxLayout fxLayoutGap="10px" class="link">
-    <li><a routerLink="/groups">Groups</a></li>
-  </ul>
+  <span>Proceed to <a routerLink="/groups">groups</a>...</span><br />
 </div>
 
 <mat-table [dataSource]="dataSource" matSort>
