--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,17 +1,17 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/groups" (click)="onClose()">
+  <a mat-list-item routerLink="/groups" (click)="onClose()" *ngIf="isAuth">
     <mat-icon>face</mat-icon>
     <span class="nav-caption">Groups</span>
   </a>
-  <a mat-list-item routerLink="/settings" (click)="onClose()">
+  <a mat-list-item routerLink="/settings" (click)="onClose()" *ngIf="isAuth">
     <mat-icon>settings</mat-icon>
     <span class="nav-caption">Settings</span>
   </a>
-  <a mat-list-item routerLink="/login" (click)="onClose()">
+  <a mat-list-item routerLink="/login" (click)="onClose()" *ngIf="!isAuth">
     <mat-icon>input</mat-icon>
     <span class="nav-caption">Login</span>
   </a>
-  <mat-list-item>
+  <mat-list-item *ngIf="isAuth">
     <button mat-icon-button (click)="onLogout()">
       <mat-icon>eject</mat-icon>
       <span class="nav-caption">Logout</span>
